# opengl-model-viewer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  main.cpp  md2_types.h  mesh.cpp  mesh.h  render.cpp  render.h  window.cpp  window.h
src/shaders/: shader.frag  shader.vert
